force-app/main/default/objects/PDRI__Deployment_Plan_Step__c/PDRI__Deployment_Plan_Step__c.object-meta.xml
<CustomObject>
    <description>Encapsulate one or more data sets which will execute concurrently as part of that step.</description>
    <label>Deployment Plan Step</label>
    <nameField>
        <label>Deployment Plan Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Plan Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>