force-app/main/default/objects/PDRI__Deployment_Plan_Step__c/fields/PDRI__Deployment_Plan__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Plan__c</fullName>
    <inlineHelpText>Specifies the deployment plan to which this step belongs.</inlineHelpText>
    <label>Deployment Plan</label>
    <referenceTo>PDRI__Deployment_Plan__c</referenceTo>
    <relationshipLabel>Deployment Plan Steps</relationshipLabel>
    <relationshipName>Deployment_Plan_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>