force-app/main/default/objects/PDRI__Deployment_Plan_Step__c/fields/PDRI__Description__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Description__c</fullName>
    <inlineHelpText>Specifies an optional description of the deployment plan step for easier reference.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>