force-app/main/default/objects/PDRI__Deployment_Plan_Step__c/fields/PDRI__Number_of_Deployment_Plan_Items__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Number_of_Deployment_Plan_Items__c</fullName>
    <label>Number of Deployment Plan Items</label>
    <summaryForeignKey>PDRI__Deployment_Plan_Item__c.PDRI__Deployment_Plan_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>