force-app/main/default/objects/PDRI__Deployment_Plan_Step__c/fields/PDRI__Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Order_Number__c</fullName>
    <inlineHelpText>Specifies the ordered position in the deployment sequence. Leave blank to default to the next step.</inlineHelpText>
    <label>Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>